C/sofa.h


void iauZp(double p[3]);

void iauZpv(double pv[2][3]);

void iauZr(double r[3][3]);

void iauTr(double r[3][3], double rt[3][3]);

void iauTrxp(double r[3][3], double p[3], double trp[3]);

void iauTrxpv(double r[3][3], double pv[2][3], double trpv[2][3]);

double iauSepp(double a[3], double b[3]);

double iauSeps(double al, double ap, double bl, double bp);

void iauS2p(double theta, double phi, double r, double p[3]);

void iauS2pv(double theta, double phi, double r,
             double td, double pd, double rd,
             double pv[2][3]);

void iauS2xpv(double s1, double s2, double pv[2][3], double spv[2][3]);

void iauSxp(double s, double p[3], double sp[3]);

void iauSxpv(double s, double pv[2][3], double spv[2][3]);